# tasks-tli

./: Cargo.toml
openspec/: config.yaml
openspec/changes/archive/2026-02-06-add-task-listing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-06-add-task-listing/specs/display/: spec.md
openspec/changes/archive/2026-02-07-add-task-removal/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-07-add-task-removal/specs/clear-completed/: spec.md
openspec/changes/archive/2026-02-07-add-task-removal/specs/display/: spec.md
openspec/specs/task-clear/: spec.md
openspec/specs/task-completion/: spec.md
openspec/specs/task-creation/: spec.md
openspec/specs/task-display/: spec.md
src/: main.rs  models.rs  storage.rs
src/commands/: add.rs  clear.rs  list.rs  mod.rs  remove.rs
tests/: integration_tests.rs
